# opengl

./: CMakeLists.txt  run.ps1  sat_sim.cpp  sphere.cpp  sphere.h
core/inc/: camera.h  gui.h  input.h  planet.h  sat_sim.h  satellite.h  shader.h  skybox.h  sphere.h  utils.h  window.h
core/src/: camera.cpp  gui.cpp  input.cpp  planet.cpp  sat_sim.cpp  satellite.cpp  shader.cpp  shaders.cpp  skybox.cpp  sphere.cpp  utils.cpp  window.cpp
scripts/: TLE.py  orbits.py  parsed_data.txt  starlink.txt  tle_data.txt
shaders/: earth.fs  earth.vs  fragment_shader.fs  light.vs  orbit.fs  orbit.vs  skybox.fs  skybox.vs  vertex_shader.vs
